<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/topTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/loginBG" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/caseQuery"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:onClick="back"
            android:padding="10dp"
            android:src="@drawable/back" />
    </RelativeLayout>

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/topTitle"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/titleET"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/titleTV"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/titleTV"
        android:background="@drawable/edit_bg"
        android:ellipsize="middle"
        android:hint="@string/titleHint"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="18sp" >
    </EditText>

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/titleTV"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/releaseDate"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/timeTV"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/timeTV"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/releaseTime"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:background="@drawable/edit_bg"
            android:editable="false"
            android:ellipsize="middle"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="18sp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/to"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/releaseTime0"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:background="@drawable/edit_bg"
            android:editable="false"
            android:ellipsize="middle"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="18sp" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/query"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_below="@+id/timeTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/query"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>