<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/topTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/loginBG" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/queryResult"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:onClick="back"
            android:padding="10dp"
            android:src="@drawable/back" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topTitle" >

        <TextView
            android:id="@+id/CaseClosed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableBottom="@drawable/charge_sheet_selector3"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/caseClosed"
            android:textColor="@drawable/color_selector"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/NoAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableBottom="@drawable/charge_sheet_selector3"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/noAccept"
            android:textColor="@drawable/color_selector"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Processing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableBottom="@drawable/charge_sheet_selector3"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/processing"
            android:textColor="@drawable/color_selector"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topMenu"
        android:divider="@null"
        android:dividerHeight="20dp"
        android:padding="15dp"
        android:scrollbars="none" >
    </ListView>

</RelativeLayout>